# types/container.go
@@ -1,8 +1,8 @@
-package requests
+package types
 
 type ContainerPort struct {
-	ContainerStart int    `form:"start" json:"start"`
-	ContainerEnd   int    `form:"end" json:"end"`
+	ContainerStart int    `form:"container_start" json:"container_start"`
+	ContainerEnd   int    `form:"container_end" json:"container_end"`
 	Host           string `form:"host" json:"host"`
 	HostStart      int    `form:"host_start" json:"host_start"`
 	HostEnd        int    `form:"host_end" json:"host_end"`
@@ -10,12 +10,12 @@ type ContainerPort struct {
 }
 
 type ContainerVolume struct {
-	Host      string `form:"start" json:"host"`
-	Container string `form:"start" json:"container"`
-	Mode      string `form:"start" json:"mode"`
+	Host      string `form:"host" json:"host"`
+	Container string `form:"container" json:"container"`
+	Mode      string `form:"mode" json:"mode"`
 }
 
-type Network struct {
+type ContainerNetwork struct {
 	Enabled bool   `form:"enabled" json:"enabled"`
 	Gateway string `form:"gateway" json:"gateway"`
 	IPRange string `form:"ip_range" json:"ip_range"`
